Fixed nav responsiveness issues on mobile

--- a/styles/common.css
+++ b/styles/common.css
@@ -29,6 +29,7 @@ body {
     padding-top: 50px;
 }
 
+
 /* Nav Bar */
 #logo {
     width: 3rem;
@@ -51,6 +52,7 @@ ul.nav {
     background-color: var(--background-color);
     border: 2px solid black;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.5);
+    /* overflow: hidden; */
 }
 
 li.navItem, li.navHome {
@@ -97,11 +99,111 @@ li.socialItem img {
     transition: var(--ez-ease);
 }
 
+/* Nav Responseiveness */
+@media screen and (min-width: 465px) {
+    #logo {
+        width: 3rem;
+    }
+    
+    ul.nav {
+        height: 60px;
+    }
+
+    li.navItem a, .tab button {
+        font-size: 22px;
+        padding: 15px 16px 13px 13px;
+    }
+    
+    li.socialItem img {
+        width: 36px;
+        padding: 12px 16px 12px 0px;
+    }
+
+    #body-wrapper {
+        padding-top: 50px;
+    }
+}
+
+@media screen and (min-width: 410px) and (max-width: 464px) {
+    #logo {
+        width: 2.5rem;
+    }
+    
+    ul.nav {
+        height: 53px;
+    }
+
+    li.navItem a, .tab button {
+        font-size: 18px;
+        padding: 12px 10px 0px 0px;
+    }
+    
+    li.socialItem img {
+        width: 28px;
+        padding: 12px 16px 12px 0px;
+    }
+
+    #body-wrapper {
+        padding-top: 35px;
+        text-align: left;
+    }
+}
+
+@media screen and (min-width: 370px) and (max-width: 409px) {
+    #logo {
+        width: 2.5rem;
+    }
+    
+    ul.nav {
+        height: 53px;
+    }
+
+    li.navItem a, .tab button {
+        font-size: 18px;
+        padding: 12px 10px 0px 0px;
+    }
+    
+    li.socialItem img {
+        width: 28px;
+        padding: 12px 16px 12px 0px;
+    }
+
+    #body-wrapper {
+        padding-top: 35px;
+    }
+}
+
+@media screen and (min-width: 300px) and (max-width: 369px) {
+    #logo {
+        width: 2.5rem;
+    }
+    
+    ul.nav {
+        height: 53px;
+    }
+
+    li.navItem a, .tab button {
+        font-size: 16px;
+        padding: 12px 10px 0px 0px;
+    }
+    
+    li.socialItem img {
+        width: 26px;
+        padding: 12px 16px 12px 0px;
+    }
+
+    #body-wrapper {
+        padding-top: 35px;
+        text-align: center;
+    }
+}
+
 iframe {
     width: 100%;
     max-width: 600px;
     aspect-ratio: 16 / 9;
 }
+
 
 /* Format Links */
 
